<resources>
    <string name="app_name">JurnalKas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editprofile">Edit Profile</string>
    <string name="hi_name">Welcome, name</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular2">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated2">Top Rated</string>
    <string name="title">Title</string>
    <string name="_1_1">1.1</string>
    <string name="detail_movies">Detail Movies</string>
    <string name="status">Status</string>
    <string name="genre">Genre:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="profile_user">Profile User</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account?</string>
    <string name="login">LOGIN</string>
    <string name="start">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="have_account">Have Account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Birthday</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="yourBalance">Your Balance</string>
    <string name="Settings">Settings</string>
    <string name="Category">Category</string>
    <string name="Categorys">Food,Education,etc.</string>
    <string name="Nominal">Nominal</string>
    <string name="Cash">Cash</string>
    <string name="Money">Rp.12.000</string>


    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>

    <!--  About -->
    <string name="text_about_license_title"><![CDATA[Attributions & License]]></string>
    <string name="text_about_license">Licensed Under Apache 2.0 License</string>
    <string name="text_about_visit_title">Visit</string>
    <string name="text_about_visit_url"><u>https://github.com/Spikeysanju/Expenso</u></string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>

    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s \n\nVisit: https://github.com/Spikeysanju/Expenso</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="text_export_csv">Export to CSV</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_undo">Undo</string>
    <string name="text_error_occurred">Error occurred!</string>


    <string name="profile">My Profile</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_Ticket">Ticket</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="date">Date</string>

</resources>